[package]
name = "karluiz-tool"
version = "0.2.0"
edition = "2024"
description = "CLI for karluiz tools"
license = "MIT"
repository = "https://github.com/CaDi-Team/karluiz-tool-cli"

[[bin]]
name = "ktool"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
dirs = "6.0"
flate2 = "1"
humantime = "2"
reqwest = { version = "0.13", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
toml = "1"
ureq = { version = "3", features = ["json"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
