[package]
name = "karluiz-tool"
version = "0.2.0"
edition = "2024"
description = "CLI for karluiz tools"
license = "MIT"
repository = "https://github.com/CaDi-Team/karluiz-tool-cli"

[[bin]]
name = "ktool"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
dirs = "6.0"
flate2 = "1"
humantime = "2"
# default-features = false avoids aws-lc-sys (needs macOS headers when cross-compiling).
# rustls-no-provider + ring = pure-Rust TLS that cross-compiles cleanly with zigbuild.
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls-no-provider"] }
# Force ring as the rustls crypto provider (not aws-lc-rs which needs C headers).
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
toml = "1"
ureq = { version = "3", default-features = false, features = ["json", "rustls-no-provider"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
